[workspace]
members = [ "cli","programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1


[workspace.dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = "0.31.0"
anchor-client = "0.31.0"
bytemuck = "1.21.0"
solana-program = "2.1.0"
