[package]
name = "zap"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
doctest = false

[dependencies]
bytemuck = { workspace = true, features = ["derive", "min_const_generics"] }
anchor-lang = { workspace = true }

[lints]
workspace = true

[features]
idl-build = ["anchor-lang/idl-build"]